prefixes, commenting, final touchups, icons

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                             </a>
                             <span class="navbar-item">
                                 <a class="button is-primary" href="index.html">
-                                    <span>Give</span>
+                                    <span>Support</span>
                                     <span class="icon">
-                                        <i class="fas fa-hand-holding-heart"></i>
+                                        <i class="fas fa-hands-helping"></i>
                                     </span>
                                 </a>
                             </span>
@@ -88,7 +88,7 @@
         <!-- Landing content -->
         <div class="hero-body">
             <div class="container has-text-centered">
-                <p class="title amatic has-text-left">
+                <p class="title amatic">
                     We are Aotearoa’s kaitiaki, guardians of our tapu
                     <br> surfbreaks, and we need your help to protect our waves!
                 </p>
@@ -97,7 +97,7 @@
                 <div class="hline"></div>
                 <div class="level">
                     <a class="button button-primary is-primary" href="index.html">
-                        <span>Give</span>
+                        <span>Give </span>
                         <span class="icon">
                             <i class="fas fa-hand-holding-heart"></i>
                         </span>
@@ -124,12 +124,9 @@
                             <div class="column">
                                 <div class="blurb">
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci,
-                                        aliquet vitae suscipit ac, ultricies non enim.
-                                        Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur
-                                        nibh,
-                                        sed convallis augue urna feugiat odio. Nunc massa est, lacinia a aliquet ut,
-                                        interdum
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci, aliquet vitae suscipit ac, ultricies non enim.
+                                        Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur nibh,
+                                        sed convallis augue urna feugiat odio. Nunc massa est, lacinia a aliquet ut, interdum
                                         pulvinar lacus. Aenean non augue ut tortor viverra dignissim.
                                     </p>
                                     <a href="index.html" class="learn-more">Learn More ></a>
@@ -164,8 +161,7 @@
                                         <p class="title overlay overlay-top-right has-text-right">
                                             Saving Mangamaunu
                                         </p>
-                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor
-                                            sit amet, consectetur adipiscing elit.</p>
+                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                         <p class="overlay overlay-bottom-left">Learn more ></p>
                                     </a>
                                 </div>
@@ -177,8 +173,7 @@
                                         <p class="title overlay overlay-top-right">
                                             Lyall Bay Carpark
                                         </p>
-                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor
-                                            sit amet, consectetur adipiscing elit.</p>
+                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                                         <p class="overlay overlay-bottom-left">Learn more ></p>
                                     </a>
@@ -195,8 +190,7 @@
                                 <!-- Newsletter -->
                                 <div class="media-item">
                                     <h2 class="heading">Newsletter</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
-                                        maximus ut
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut
                                         arcu et, lobortis rutrum nisi.
                                     </p>
                                     <div class="field">
@@ -215,14 +209,18 @@
                                             </span>
                                         </p>
                                     </div>
-                                    <a href="index.html" class="button is-primary">Sign Up</a>
+                                    <a href="index.html" class="button is-primary">
+                                        <span>Sign Up</span>
+                                        <span class="icon">
+                                            <i class="fas fa-hand-point-up"></i>
+                                        </span>
+                                    </a>
                                 </div>
 
                                 <!-- Membership -->
                                 <div class="media-item">
                                     <h2 class="heading">Membership</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
-                                        maximus ut
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut
                                         arcu et, lobortis rutrum nisi.
                                     </p>
                                     <div class="field">
@@ -241,7 +239,12 @@
                                             </span>
                                         </p>
                                     </div>
-                                    <a href="index.html" class="button is-primary">Join the Whanau!</a>
+                                    <a href="index.html" class="button is-primary">
+                                        <span>Join the Whanau!</span>
+                                        <span class="icon">
+                                            <i class="fas fa-hand-point-up"></i>
+                                        </span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -297,12 +300,12 @@
 
                                 <!-- Facebook -->
                                 <div class="media-item">
-                                    <div class="fb-page" data-href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/"
-                                        data-width="340" data-height="70" data-small-header="false"
-                                        data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                                        <blockquote cite="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/"
-                                            class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/">Surfbreak
-                                                Protection Society</a></blockquote>
+                                    <div class="fb-page" data-href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/" data-width="340"
+                                        data-height="70" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+                                        data-show-facepile="true">
+                                        <blockquote cite="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/" class="fb-xfbml-parse-ignore">
+                                            <a href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/">Surfbreak Protection Society</a>
+                                        </blockquote>
                                     </div>
                                 </div>
 
@@ -310,8 +313,7 @@
                                 <div class="media-item">
                                     <blockquote class="instagram-media" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:340px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                                         <div style="padding:16px;">
-                                            <a href="https://www.instagram.com/p/BhvmkYLhbug/?utm_source=ig_embed&amp;utm_medium=loading"
-                                                style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                            <a href="https://www.instagram.com/p/BhvmkYLhbug/?utm_source=ig_embed&amp;utm_medium=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
                                                 target="_blank">
                                                 <div style=" display: flex; flex-direction: row; align-items: center;">
                                                     <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
@@ -322,8 +324,7 @@
                                                 </div>
                                                 <div style="padding: 19% 0;"></div>
                                                 <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-                                                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
-                                                        xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
                                                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                             <g transform="translate(-511.000000, -20.000000)" fill="#000000">
                                                                 <g>
@@ -366,8 +367,7 @@
 
                                 <!-- Twitter -->
                                 <div class="media-item">
-                                    <a class="twitter-timeline" data-width="340" data-height="200" data-link-color="#00d1b2"
-                                        href="https://twitter.com/hollaylayj?ref_src=twsrc%5Etfw">Tweets by hollaylayj</a>
+                                    <a class="twitter-timeline" data-width="340" data-height="200" data-link-color="#00d1b2" href="https://twitter.com/hollaylayj?ref_src=twsrc%5Etfw">Tweets by hollaylayj</a>
                                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                 </div>
                             </div>
@@ -383,10 +383,8 @@
                             <div class="columns is-mobile">
                                 <div id="responsiveColumn" class="column is-offset-7">
                                     <p class="blurb">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
-                                        maximus ut arcu et, lobortis rutrum nisi. Curabitur
-                                        vitae erat vitae felis eleifend vehicula quis nec tellus. Lorem ipsum dolor sit
-                                        amet,
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut arcu et, lobortis rutrum nisi. Curabitur
+                                        vitae erat vitae felis eleifend vehicula quis nec tellus. Lorem ipsum dolor sit amet,
                                         consectetur adipiscing elit.
                                     </p>
                                 </div>
@@ -449,10 +447,8 @@
                 <section class="contact container has-text-centered">
                     <div class="section-container">
                         <h1 class="heading">Say g'day!</h1>
-                        <p class="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci,
-                            aliquet vitae suscipit
-                            ac, ultricies non enim. Etiam fermentum, libero sit amet ullamcorper interdum, est magna
-                            consectetur
+                        <p class="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci, aliquet vitae suscipit
+                            ac, ultricies non enim. Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur
                             nibh, sed convallis augue urna feugiat odio.</p>
                         <div class="contact-form">
                             <div class="contact-form-input">
@@ -504,21 +500,21 @@
                         <div class="column">
                             <a href="https://www.volcom.com" target="_blank">
                                 <div class="figure">
-                                    <img src="img/partners/volcom.png" alt="Volcom">
+                                    <img src="img/partners/volcom.png" alt="Volcom" title="Volcom">
                                 </div>
                             </a>
                         </div>
                         <div class="column">
                             <a href="https://www.maoriparty.org/" target="_blank">
                                 <div class="figure">
-                                    <img src="img/partners/maori.png" alt="Maori Party">
+                                    <img src="img/partners/maori.png" alt="Maori Party NZ" title="Maori Party NZ">
                                 </div>
                             </a>
                         </div>
                         <div class="column">
                             <a href="https://www.onepercentfortheplanet.org/" target="_blank">
                                 <div class="figure">
-                                    <img src="img/partners/planet.png" alt="1% for the Planet">
+                                    <img src="img/partners/planet.png" alt="1% for the Planet" title="1% for the Planet">
                                 </div>
                             </a>
                         </div>
@@ -580,7 +576,12 @@
                                             </span>
                                         </p>
                                     </div>
-                                    <a href="index.html" class="button is-primary">Sign Up</a>
+                                    <a href="index.html" class="button is-primary">
+                                        <span>Sign Up</span>
+                                        <span class="icon">
+                                            <i class="fas fa-hand-point-up"></i>
+                                        </span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
