--- a/index.html
+++ b/index.html
@@ -397,14 +397,14 @@
                                         <figure class="image is-2by1">
                                             <img src="img/_DSC8072.jpg">
                                         </figure>
-                                        <h1 class="title">Beach Access</h1>
+                                        <h1 class="title">Tātahi / Beach Access</h1>
                                     </a>
                                     <!-- Clean water -->
                                     <a href="#" id="cleanWater" class='carousel-item'>
                                         <figure class="image is-2by1">
                                             <img src="img/_DSC7521.jpg">
                                         </figure>
-                                        <h1 class="title">Clean Water</h1>
+                                        <h1 class="title">Waitapu / Clean Water</h1>
 
                                     </a>
                                     <!-- Coastal preservation -->
